--- a/takudzwa_masawi/style.css
+++ b/takudzwa_masawi/style.css
@@ -1,5 +1,6 @@
 body{
-    background: url("https://images.unsplash.com/photo-1506606401543-2e73709cebb4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c503710f47a3f687d8711b6202861028&auto=format&fit=crop&w=750&q=80") fixed;
+    /*background: url("https://images.unsplash.com/photo-1506606401543-2e73709cebb4?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c503710f47a3f687d8711b6202861028&auto=format&fit=crop&w=750&q=80") fixed;*/
+    background: url("https://images.pexels.com/photos/340901/pexels-photo-340901.jpeg?auto=compress&cs=tinysrgb&h=350") fixed;
     background-size: cover;
     box-sizing: border-box;
     margin: auto;
@@ -52,13 +53,23 @@ header img{
     color: #fff;
 }
 .main_section{
-padding: 60px;
+   /* padding: 60px;*/
+    width: 80%;
+    margin: auto;
+    
 }
 h3, h2{
 	text-decoration: underline;
 	color: #fff;
 	padding-left: 20px;
-	margin:20px;
+    margin:20px;
+}
+h2{
+    text-align: center;
+}
+.abot{
+    font-style: oblique;
+    color: #e6ecf7;
 }
 table {
   border-collapse: collapse;
@@ -150,3 +161,63 @@ footer p{
         width: 90%;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.gallery{
+  width:100%;
+  display:flex;
+  flex-flow: row wrap;
+}
+
+.gallery__item{
+  box-sizing:border-box;
+  width:100%;
+  padding:1rem;
+  margin:1rem;
+  box-shadow: 1px 2px 40px 2px rgba(160, 160, 160, .5);
+}
+.gallery__image-caption{
+  margin-top:1rem;
+  font-size:0.95rem;
+}
+.gallery__image{
+  width:100%;
+  display:block;
+transition: 1s;
+}
+
+.gallery__image:hover{
+    transform: scale(1.30);
+}
+
+@media only screen and (min-width: 33.75em){
+  .gallery__item{
+    flex-basis: calc(50% - 2rem);
+  }
+}
+
+@media only screen and (min-width: 48em){
+  .gallery__item{
+    flex-basis: calc((100% / 3) - 2rem);
+  }
+}
+
+@media only screen and (min-width: 60em){
+  .gallery__item{
+    flex-basis: calc((100% / 4) - 2rem);
+  }
+}
+
